mainly error handling

--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -641,8 +641,8 @@
           </div>
 
           <!-- ACT Test Info -->
-          <div id = "actDiv" class = "input-block">
-            <div class = "input-row input-row-buttons">
+          <div class = "input-row">
+            <div class = "input-block">
               <label for = "studentACTTestsArray" class="label">ACT Test(s):</label>
               <div class="more-info" data-more-info="Any ACT test that have been taken is the past. Dates can be approximate.">?</div>
               <img src="Images/Add Button.png" alt="add previous ACT test" height=25px id="addPreviousACTButton" onclick="addActTest()">
@@ -675,33 +675,27 @@
           <div class="input-row">
             <!-- Student Scholarships -->
             <div class="input-block">
-              <div class = "input-row-buttons">
-                <label for="studentScholarshipArray" class="label">Scholarship goal(s):</label>
-                <img src="Images/Add Button.png" alt="add scholarship goal" height=25px id="addScholarshipGoalButton" onclick="addElement('studentScholarshipArray')">
-                <img src="Images/Remove Button.png" alt="remove scholarship goal" height=25px id="removeScholarshipGoalButton" onclick="removeElement('studentScholarshipArray')">
-              </div>
+              <label for="studentScholarshipArray" class="label">Scholarship goal(s):</label>
+              <img src="Images/Add Button.png" alt="add scholarship goal" height=25px id="addScholarshipGoalButton" onclick="addElement('studentScholarshipArray')">
+              <img src="Images/Remove Button.png" alt="remove scholarship goal" height=25px id="removeScholarshipGoalButton" onclick="removeElement('studentScholarshipArray')">
             </div>
           </div>
 
           <div class="input-row">
             <!-- Student Colleges -->
             <div class="input-block">
-              <div class = "input-row-buttons">
-                <label for="studentCollegeArray" class="label">Top College(s):</label>
-                <img src="Images/Add Button.png" alt="add college" height=25px id="addCollegeButton" onclick="addElement('studentCollegeArray')">
-                <img src="Images/Remove Button.png" alt="remove college" height=25px id="removeCollegeButton" onclick="removeElement('studentCollegeArray')">
-              </div>
+              <label for="studentCollegeArray" class="label">Top College(s):</label>
+              <img src="Images/Add Button.png" alt="add college" height=25px id="addCollegeButton" onclick="addElement('studentCollegeArray')">
+              <img src="Images/Remove Button.png" alt="remove college" height=25px id="removeCollegeButton" onclick="removeElement('studentCollegeArray')">
             </div>
           </div>
 
           <div class="input-row">
             <!-- Student Extracurriculars -->
             <div class="input-block">
-              <div class = "input-row-buttons">
-                <label for="studentExtracurricularArray" class="label">Extracurricular(s):</label>
-                <img src="Images/Add Button.png" alt="add extracurricular" height=25px id="addExtracurricularButton" onclick="addElement('studentExtracurricularArray')">
-                <img src="Images/Remove Button.png" alt="remove extracurricular" height=25px id="removeExtracurricularButton" onclick="removeElement('studentExtracurricularArray')">
-              </div>
+              <label for="studentExtracurricularArray" class="label">Extracurricular(s):</label>
+              <img src="Images/Add Button.png" alt="add extracurricular" height=25px id="addExtracurricularButton" onclick="addElement('studentExtracurricularArray')">
+              <img src="Images/Remove Button.png" alt="remove extracurricular" height=25px id="removeExtracurricularButton" onclick="removeElement('studentExtracurricularArray')">
             </div>
           </div>
 
