noselect for goal scores

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="flex-row" ondblclick="openUpdateGoals()">
-                <div class="score-box composite">
+                <div class="score-box composite noselect">
                 <p id="composite-score"></p>
                 <div class="tooltip">
                     <div class="flex-row justify-space-between">
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 </div>
-                <div class="score-box english">
+                <div class="score-box english noselect">
                 <p id="english-score"></p>
                 <div class="tooltip">
                     <div class="flex-row justify-space-between">
@@ -200,7 +200,7 @@
                     </div>
                 </div>
                 </div>
-                <div class="score-box math">
+                <div class="score-box math noselect">
                 <p id="math-score"></p>
                 <div class="tooltip">
                     <div class="flex-row justify-space-between">
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 </div>
-                <div class="score-box reading">
+                <div class="score-box reading noselect">
                 <p id="reading-score"></p>
                 <div class="tooltip">
                     <div class="flex-row justify-space-between">
@@ -258,7 +258,7 @@
                     </div>
                 </div>
                 </div>
-                <div class="score-box science">
+                <div class="score-box science noselect">
                 <p id="science-score"></p>
                 <div class="tooltip">
                     <div class="flex-row justify-space-between">
