--- a/public/math-program.html
+++ b/public/math-program.html
@@ -41,7 +41,7 @@
       <option value="11">11</option>
       <option value="12">12</option>
     </select>
-    <h2 id="student-expectation"></h2>
+    <textarea id="student-expectation" class="expectation-input" disabled></textarea>
 </div>
 
   <div id="student-log-notes-div">
