--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -295,6 +295,12 @@
         <!------------------->
 
         <div id="student-notes-section">
+            <!-- label to remind about ordering -->
+            <div class="flex-row justify-space-between">
+                <h4>Oldest section taught</h4>
+                <div></div>
+                <h4>Latest section taught</h4>
+            </div> 
             <div id="student-notes-labels" class="flex-row justify-space-evenly align-flex-end">
                 <h2 id="general-chat-label" class="student-notes-label composite flex-grow chat-label-selected">General Notes</h2>
                 <h2 id="english-chat-label" class="student-notes-label english flex-grow">English</h2>
