Math and Phonics Programs finished

--- a/public/math-program.html
+++ b/public/math-program.html
@@ -71,16 +71,9 @@
     <div id = "lessonList" class = "tests">
     </div>
 
-    <!--<div class = "input-row-center formEnd-center">
-
-        <button class = "button" onclick = "openForm('dailyLog')">
-            Back
-        </button>
-
-    </div>-->
-
   </div>
 
+  <p id = 'errorMessage' style = "color:red"></p>
   <button type = button id="submitLesson" class="button" onclick="submitLessons()">submit</button>
 
 
