--- a/public/phonics-program.html
+++ b/public/phonics-program.html
@@ -38,7 +38,7 @@
 
   <div id = "lessonsForm" class = "metaForm noselect">
     <div class="heading-block">
-        <h2>Math Program</h2>
+        <h2>Phonics Program</h2>
     </div>
 
     <div class = "lessonHeaders">
@@ -56,16 +56,9 @@
     <div id = "lessonList" class = "tests">
     </div>
 
-    <!--<div class = "input-row-center formEnd-center">
-
-        <button class = "button" onclick = "openForm('dailyLog')">
-            Back
-        </button>
-
-    </div>-->
-
   </div>
 
+  <p id = 'errorMessage' style = "color:red"></p>
   <button type = button id="submitLesson" class="button" onclick="submitLessons()">submit</button>
 
 
