--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -64,12 +64,12 @@
             </div><br>
 
             <div class="input-row">
-              <button type = button class="button" onclick="closeUser('tutor')">back</button> 
+              <button type = button class="button" onclick="closeModal('tutor')">back</button> 
               <button type = button class="button" onclick="createTutor()">submit</button>
             </div>
 
             <div class="input-row">
-              <p id="errMsg"></p>
+              <p id="tutorErrMsg"></p>
             </div>
           </form>
         </div>
@@ -110,16 +110,149 @@
             </div><br>
 
             <div class="input-row">
-              <button type = button class="button" onclick="closeUser('secretary')">back</button> 
+              <button type = button class="button" onclick="closeModal('secretary')">back</button> 
               <button type = button class="button" onclick="createSecretary()">submit</button>
             </div>
 
             <div class="input-row">
-              <p id="errMsg"></p>
+              <p id="secretaryErrMsg"></p>
             </div>
           </form>
         </div>
       </div>
+    </section>
+
+    <section id="add-school-section" class="add-user-section">
+      <div id="add-school-div" class="registration-block">
+        <div class="heading-block">
+          <h2>Add School</h2>
+        </div>
+        <div id="form-scroll-block">
+          <div id="spinnyBoiSchool" class="loader"></div>
+          <form onsubmit="return false">
+            <div class="input-row">
+              <div class="input-block">
+                  <label for="schoolLocation" class="label">Wasatch Location:</label>
+                  <select id="schoolLocation" class="select" required>
+                    <option selected disabled value="">select a location</option>
+                  </select>
+              </div>
+            </div>
+            <div class="input-row">
+              <div class="input-block">
+                  <label for="schoolName" class="label">School Name:</label>
+                  <input id="schoolName" placeholder="Alta" class="input" required>
+              </div>
+
+              <div class="input-block">
+                <label for="schoolType" class="label">School Type:</label>
+                  <select id="schoolType" class="select" required>
+                    <option selected disabled value="">select a type</option>
+                    <option value="public">Public</option>
+                    <option value="private">Private</option>
+                    <option value="charter">Charter</option>
+                    <option value="virtual">Virtual</option>
+                    <option value="magnet">Magnet</option>
+                  </select>
+              </div>
+            </div><br>
+
+            <div class="input-row">
+              <div class="input-block">
+                  <label for="schoolGradeMin" class="label">School Grades:</label>
+                  <div class="rangeInput">
+                    <div>
+                      <select id="schoolGradeMin" placeholder="" class="select range" required>
+                        <option selected disabled value=""></option>
+                        <option value="k">K</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="c">C</option>
+                      </select>
+                    </div>
+                    <div>
+                      <select id="schoolGradeMax" placeholder="" class="select range" required>
+                        <option selected disabled value=""></option>
+                        <option value="k">K</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="c">C</option>
+                      </select>
+                    </div>
+                  </div>
+
+              </div>
+            </div><br>
+
+            <div class="input-row">
+              <button type = button class="button" onclick="closeModal('school')">back</button> 
+              <button type = button class="button" onclick="createSchool()">submit</button>
+            </div>
+
+            <div class="input-row">
+              <p id="schoolErrMsg"></p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section id="add-extracurricular-section" class="add-user-section">
+      <div id="add-extracurricular-div" class="registration-block">
+        <div class="heading-block">
+          <h2>Add Extracurricular</h2>
+        </div>
+        <div id="form-scroll-block">
+          <div id="spinnyBoiExtracurricular" class="loader"></div>
+          <form onsubmit="return false">
+            <div class="input-row">
+              <div class="input-block">
+                  <label for="extracurricular" class="label">Extracurricular</label>
+                  <input id="extracurricular" class="input" required>
+              </div>
+            </div>
+
+            <div class="input-row">
+              <button type = button class="button" onclick="closeModal('extracurricular')">back</button> 
+              <button type = button class="button" onclick="createExtracurricular()">submit</button>
+            </div>
+
+            <div class="input-row">
+              <p id="extracurricularErrMsg"></p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section id="navigationSection" class="add-user-section">
+      <div id="navigationModal">
+        <div class="close" onclick="document.getElementById('navigationSection').style.display = 'none'">X</div>
+        <h4>Which lesson are you teaching today?</h4>
+        <button id="actNav" class="button">ACT</button>
+        <button id="subjectTutoringNav" class="button">Subject Tutoring</button>
+        <button id="mathProgramNav" class="button">Math Program</button>
+        <button id="phonicsProgramNav" class="button">Phonics Program</button>
     </section>
 
     <section>
@@ -131,8 +264,10 @@
 
       <div class="flex-row align-center">
         <button class="button" onclick="goToInquiry()">Inquiry</button>
-        <button class="button" onclick="popUpUser('tutor')">Add Tutor</button>
-        <button class="button" onclick="popUpUser('secretary')">Add Secretary</button>
+        <button class="button" onclick="openModal('tutor')">Add Tutor</button>
+        <button class="button" onclick="openModal('secretary')">Add Secretary</button>
+        <button class="button" onclick="openModal('school')">Add School</button>
+        <button class="button" onclick="openModal('extracurricular')">Add Extracurricular</button>
         <button class="button" onclick="resetPassword()">reset password</button>
       </div>
 
@@ -141,7 +276,6 @@
           <thead>
             <tr>
               <th>Student</th>
-              <th>Type</th>
               <th>Location</th>
               <th>Status</th>
               <th>Parent</th>
