--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -27,6 +27,17 @@
     <section id="loading-screen">
       <div class="loading-ring"></div>
     </section>
+
+    <section id="navigationSection" class="add-user-section">
+      <div id="navigationModal">
+        <div class="close" onclick="document.getElementById('navigationSection').style.display = 'none'">X</div>
+        <h4>Which lesson are you teaching today?</h4>
+        <button id="actNav" class="button">ACT</button>
+        <button id="subjectTutoringNav" class="button">Subject Tutoring</button>
+        <button id="mathProgramNav" class="button">Math Program</button>
+        <button id="phonicsProgramNav" class="button">Phonics Program</button>
+    </section>
+
     <section>
       <div class="header">
         <div>
@@ -52,7 +63,6 @@
           <thead>
             <tr>
               <th>Student</th>
-              <th>Type</th>
               <th>Location</th>
             </tr>
           </thead>
