few more touches

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -248,7 +248,7 @@
     <section id="navigationSection" class="add-user-section">
       <div id="navigationModal">
         <div class="close" onclick="document.getElementById('navigationSection').style.display = 'none'">X</div>
-        <h4>Which lesson are you teaching today?</h4>
+        <h4 style="margin: 0;">Which lesson are you teaching today?</h4>
         <button id="actNav" class="button">ACT</button>
         <button id="subjectTutoringNav" class="button">Subject Tutoring</button>
         <button id="mathProgramNav" class="button">Math Program</button>
