Sebastian's error fix!

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -819,7 +819,7 @@
             <div id = "inCenterTests" class = "tests">
             </div>
 
-            <div class = "input-row-center formEnd-center">
+            <div id = 'inCenterSubmitDiv' class = "input-row-center formEnd-center">
 
                 <button id = "inCenterBackDiv" class = "button" onclick = "openForm('dailyLog')">
                     Back
