--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -556,8 +556,8 @@
             </div>
             <!-- Student Grade -->
             <div class="input-block">
-              <label for="studentGrade" class="label" data-save='false'>Grade:</label>
-              <select id="studentGrade" class="input">
+              <label for="studentGrade" class="label">Grade:</label>
+              <select id="studentGrade" class="input" data-save='false'>
                 <option value="">Select a grade</option>
                 <option value="0">K</option>
                 <option value="1">1</option>
