End of day efforts

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -156,50 +156,56 @@
         </div>
 
         <div class = 'metaForm'>
-        <div id="general-chat-area" class="chat-area-visible">
 
-            <div id="student-general-notes" class="student-notes">
+            <div class = 'heading-block visible'></div>
+            <div id="general-chat-area" class="chat-area-visible">
+
+                <div id="student-general-notes" class="student-notes">
+                </div>
+
             </div>
+            <textarea id="student-general-notes-input" class="student-notes-input visible" placeholder="Any general notes?"></textarea>
 
-            <textarea id="student-general-notes-input" class="student-notes-input" placeholder="Any general notes?"></textarea>
 
-        </div>
+            <div class = 'heading-block hidden'></div>
+            <div id="english-chat-area" class="chat-area-hidden">
 
-        <div id="english-chat-area" class="chat-area-hidden">
+                <div id="student-english-notes" class="student-notes">
+                </div>
 
-            <div id="student-english-notes" class="student-notes">
             </div>
+            <textarea id="student-english-notes-input" class="student-notes-input hidden" placeholder="Any section specific notes?"></textarea>
 
-            <textarea id="student-english-notes-input" class="student-notes-input" placeholder="Any section specific notes?"></textarea>
 
-        </div>
+            <div class = 'heading-block hidden'></div>
+            <div id="math-chat-area" class="chat-area-hidden">
 
-        <div id="math-chat-area" class="chat-area-hidden">
+                <div id="student-math-notes" class="student-notes">
+                </div>
 
-            <div id="student-math-notes" class="student-notes">
             </div>
+            <textarea id="student-math-notes-input" class="student-notes-input hidden" placeholder="Any section specific notes?"></textarea>
 
-            <textarea id="student-math-notes-input" class="student-notes-input" placeholder="Any section specific notes?"></textarea>
 
-        </div>
+            <div class = 'heading-block hidden'></div>
+            <div id="reading-chat-area" class="chat-area-hidden">
 
-        <div id="reading-chat-area" class="chat-area-hidden">
-
-            <div id="student-reading-notes" class="student-notes">
-            </div>
+                <div id="student-reading-notes" class="student-notes">
+                </div>
             
-            <textarea id="student-reading-notes-input" class="student-notes-input" placeholder="Any section specific notes?"></textarea>
-
-        </div>
-
-        <div id="science-chat-area" class="chat-area-hidden">
-
-            <div id="student-science-notes" class="student-notes">
             </div>
+            <textarea id="student-reading-notes-input" class="student-notes-input hidden" placeholder="Any section specific notes?"></textarea>
 
-            <textarea id="student-science-notes-input" class="student-notes-input" placeholder="Any section specific notes?"></textarea>
 
-        </div>
+            <div class = 'heading-block hidden'></div>
+            <div id="science-chat-area" class="chat-area-hidden">
+
+                <div id="student-science-notes" class="student-notes">
+                </div>
+
+            </div>
+            <textarea id="student-science-notes-input" class="student-notes-input hidden" placeholder="Any section specific notes?"></textarea>
+
         </div>
 
     </section>
