--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -285,5 +285,13 @@
       </div>
       
 
+      <!-- feedback area -->
+      <div style="margin: 25px;">
+        <h3>Feedback</h3>
+        <textarea id="feedback_input" class="feedback_input" placeholder="any feedback?"></textarea>
+        <p id="feedback_error_msg"></p>
+        <button id="feedback_submit_btn" class="button" onclick="submitFeedback()">Submit</button>
+      </div>
+
     </section>
   </body>
