--- a/public/Dashboard/Secretary.html
+++ b/public/Dashboard/Secretary.html
@@ -30,44 +30,36 @@
 
     <section>
       <div class="header">
-        <h2 id="secretary-name"></h2>
+        <div>
+          <h2 id="locationName"></h2>
+          <h2 id="secretary-name"></h2>
+        </div>
         <button class="button" onclick="signOut()">Sign Out</button>
       </div>
-
-      <div class="flex-row align-center">
-        <button class="button" onclick="goToInquiry()">Inquiry</button>
+      <div class="input-row">
+        <div class="input-block">
+          <button class="button" onclick="resetPassword()">reset password</button>
+        </div>
       </div>
-
-      <!-- <div class="input-row">
-        <div class="input-block">
-          <label class="label">Pending Students</label>
-          <select id="pendingStudents" name="pending-student" onchange="pendingStudentSelected(this)">
-            <option disabled selected>Choose a student</option>
-          </select>
-        </div>
-
-        <div class="input-block">
-          <label class="label">Active Students</label>
-          <select id="activeStudents" name="active-students" onchange="activeStudentSelected(this)">
-            <option disabled selected>Choose a student</option>
-          </select>
-        </div>
-      </div> -->
 
       <div>
         <table id="student-table" class="display" width="100%">
           <thead>
             <tr>
-              <th>Student Name</th>
-              <th></th>
-              <th>Type</th>
-              <th>Status</th>
-              <th>Parent Name</th>
-              <th></th>
+              <th>Student</th>
+              <th>Location</th>
+              <th>Parent</th>
             </tr>
           </thead>
         </table>
       </div>
 
+      <!-- feedback area -->
+      <div style="margin: 25px;">
+        <h3>Feedback</h3>
+        <textarea id="feedback_input" class="feedback_input" placeholder="any feedback?"></textarea>
+        <p id="feedback_error_msg"></p>
+        <button id="feedback_submit_btn" class="button" onclick="submitFeedback()">Submit</button>
+      </div>
     </section>
   </body>
